--- a/iosTask/Base.lproj/Main.storyboard
+++ b/iosTask/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="m8L-dU-aIz">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,12 +19,11 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="64" width="414" height="672"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="AAe-3h-OWg">
-                                <rect key="frame" x="0.0" y="20" width="375" height="583"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="AAe-3h-OWg">
+                                <rect key="frame" x="0.0" y="20" width="414" height="652"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="5" id="6LK-Ll-XyK">
                                     <size key="itemSize" width="175" height="175"/>
@@ -39,26 +39,41 @@
                                             <rect key="frame" x="0.0" y="0.0" width="175" height="175"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dBJ-Xf-xQw">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dBJ-Xf-xQw">
                                                     <rect key="frame" x="37" y="8" width="100" height="100"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="qnt-Mh-Bg3">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="qnt-Mh-Bg3">
                                                     <rect key="frame" x="10" y="145" width="154" height="22"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="22" id="Shc-eX-u3R"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="4VW-LF-lre">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="4VW-LF-lre">
                                                     <rect key="frame" x="8" y="119" width="154" height="25"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="25" id="4yr-wE-Fmc"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="dBJ-Xf-xQw" firstAttribute="leading" secondItem="uHQ-e4-reA" secondAttribute="leadingMargin" constant="29" id="CIz-RI-Zc4"/>
+                                            <constraint firstItem="4VW-LF-lre" firstAttribute="leading" secondItem="uHQ-e4-reA" secondAttribute="leadingMargin" id="MvM-rc-XVe"/>
+                                            <constraint firstItem="qnt-Mh-Bg3" firstAttribute="bottom" secondItem="uHQ-e4-reA" secondAttribute="bottomMargin" id="P2O-qi-m1o"/>
+                                            <constraint firstItem="dBJ-Xf-xQw" firstAttribute="centerX" secondItem="qnt-Mh-Bg3" secondAttribute="centerX" id="Zdh-Xe-Gwi"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="4VW-LF-lre" secondAttribute="trailing" constant="5" id="fwO-BZ-xBk"/>
+                                            <constraint firstItem="qnt-Mh-Bg3" firstAttribute="leading" secondItem="uHQ-e4-reA" secondAttribute="leadingMargin" constant="2" id="qrq-HN-gKd"/>
+                                            <constraint firstItem="4VW-LF-lre" firstAttribute="top" secondItem="dBJ-Xf-xQw" secondAttribute="bottom" constant="11" id="qty-al-ONT"/>
+                                            <constraint firstItem="dBJ-Xf-xQw" firstAttribute="top" secondItem="uHQ-e4-reA" secondAttribute="topMargin" id="rMW-RC-4LN"/>
+                                            <constraint firstItem="dBJ-Xf-xQw" firstAttribute="centerX" secondItem="uHQ-e4-reA" secondAttribute="centerX" id="yVF-iT-o0j"/>
+                                            <constraint firstItem="qnt-Mh-Bg3" firstAttribute="top" secondItem="4VW-LF-lre" secondAttribute="bottom" constant="1" id="zyA-ZG-Wj8"/>
+                                        </constraints>
                                         <connections>
                                             <outlet property="email" destination="4VW-LF-lre" id="8ge-Ak-SvD"/>
                                             <outlet property="image" destination="dBJ-Xf-xQw" id="ggg-Bl-Yap"/>
@@ -73,11 +88,17 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="AAe-3h-OWg" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="6QN-NF-Qwd"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="AAe-3h-OWg" secondAttribute="bottom" id="7ny-LF-OwU"/>
+                            <constraint firstAttribute="trailing" secondItem="AAe-3h-OWg" secondAttribute="trailing" id="9fC-fi-tfZ"/>
+                            <constraint firstItem="AAe-3h-OWg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="t6V-op-TfC"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Participants" id="10w-Jq-cN6">
                         <barButtonItem key="rightBarButtonItem" style="done" id="UwX-TG-hnH">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="LOT-LW-K3N">
-                                <rect key="frame" x="276" y="7" width="83" height="30"/>
+                                <rect key="frame" x="311" y="7" width="83" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="FB Login"/>
